--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "lucide-react": "^0.548.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
