--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
-    "stripe": "^16.0.0",
     "lucide-react": "^0.548.0",
     "next": "15.5.7",
     "react": "19.1.0",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
+    "stripe": "^16.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
