--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase-admin": "^13.5.0",
     "lucide-react": "^0.548.0",
     "next": "15.5.7",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-colorful": "^5.6.1",
     "react-day-picker": "^9.11.1",
